# CDRL

./: LICENSE  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  setup.cfg
64hidden-mlp-nf-onvae-reduction-cosinelr-batch10-chain-seed=1234/: 64hidden-mlp-nf-onvae-reduction-cosinelr-batch10-chain-seed=1234-model.pt
cnf-indnoise-chain-seed=1234/: cnf-indnoise-chain-seed=1234-model.pt
experiments/: 01_train_model.py  02_train_realnvp_model.py  03_train_realnvp_model_ind_noise.py  submit-python-jobs.sh
experiments/causal/: 01_train_model.py  02_train_realnvp_model.py  03_train_realnvp_model_ind_noise.py  04_train_multiscalerealnvp_model_highdim_noise.py  05_train_multiscale_normflows_causalnf.py  06_vae_reduction_mlp_causalnf.py  07_vae_reduction_digitbarv1_mlp_causalnf.py  08_vae_reduction_digitbarv2_mlp_causalnf.py  submit-python-jobs.sh
experiments/causal/collider/: 01_train_collider_model.py  submit-python-jobs.sh
experiments/causal/nonmarkov/: 01_train_nonmarkov_model.py  (+1 more)
experiments/noncausalflow/: 01_train_noncausalnf.py  02_train_multiscale_noncausalnf.py  03_train_multiscale_noncausalnf_standardmnist.py  04_train_multiscale_normflows_noncausalnf.py  05_train_glowblock_normflows_noncausalnf.py  submit-python-jobs.sh
experiments/variational/: 01_train_vae.py  submit-python-jobs.sh
gendis/: base.py  config.py  data.py  distributions.py  encoder.py  metrics.py  model.py  utils.py
gendis/causal/: modelv2.py  modelv3.py
gendis/datasets/: __init__.py  barmnist.py  causalbarmnist.py  causalmnist.py  coloredmnist.py  data_module.py  dgp.py  mixing_function.py  noise_generator.py  utils.py
gendis/noncausal/: flows.py  model.py  modelv2.py
gendis/normalizing_flow/: distribution.py  utils.py
gendis/tests/: test_model.py
gendis/variational/: conv_vae.py  model.py  test.py  vae.py  vae_base.py
mlp-nf-onvae-reduction-cosinelr-batch10-chain-seed=1234/: mlp-nf-onvae-reduction-cosinelr-batch10-chain-seed=1234-model.pt
nf-glowblocks-cosinelr-batch10-chain-seed=1234/: nf-glowblocks-cosinelr-batch10-chain-seed=1234-model.pt
nf-noquant-channelmasking-batch1024-chain-seed=1234/: nf-noquant-channelmasking-chain-seed=1234-model.pt
notebooks/: Analyze NF on VAE reduction models.ipynb  Chain-MNIST-dataset-generate.ipynb  Collider-MNIST-dataset-generate.ipynb  Dataset Generation.ipynb  Implement GlowBlock Model.ipynb  Inspect Trained Models.ipynb  NF on VAE-Collider.ipynb  NF on VAE-Nonmarkov.ipynb  NF on top of VAE representation.ipynb  NonMarkov-MNIST-dataset-generate.ipynb  Playground Preprocessing.ipynb  Visualize NF Baseline.ipynb  Visualize VAE Resnet Results.ipynb  causalbar mnist.ipynb  check debug model.ipynb  dataset generate v2.ipynb  viz.py
notebooks/old/: causalbar mnist.ipynb
scripts/: 01_train_basic_models.py
tests/: test_openai.py  test_pipeline.py
vae-chain-seed=1234/: vae-chain-seed=1234-model.pt
vae_reduction/: causalbar_reduction_dataset.py  train_config.yaml  trainvae_main.py
vae_reduction/config/: config.py  config.yaml
vae_reduction/models/: __init__.py  conv_vae.py  vae.py
(+22 files in other folders)
