[options]
packages = find:

[options.packages.find]
include = gendis*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = gendis
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes

[mypy]
ignore_missing_imports = True
allow_redefinition = True
exclude=
    gendis/externals

[mypy-joblib.*]
follow_imports = skip

[codespell]
skip = ./.git,./.mypy_cache,./gendis/feature_extraction/_stop_words.py,./doc/_build,./doc/auto_examples,./doc/modules/generated
ignore-words = build_tools/codespell_ignore_words.txt
